# pgui

./: .gitignore  Cargo.toml  DATABASE_MONITORING.md  MAC_APP_BUILD.md  README.md  build_complete_app.sh  build_mac_app.sh  create_app_icon.sh  docker-compose.ssh-test.yml  docker-compose.yml  init.sql
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
assets/icons/: AppIcon.icns
examples/: connection_monitor_usage.rs  load_connections_usage.rs
history/: 2025-06-07.md  2025-06-09.md
src/: assets.rs  connections_panel.rs  database.rs  database_panel.rs  editor.rs  header_bar.rs  lib.rs  main.rs  results_panel.rs  state.rs  tables_panel.rs  themes.rs  window.rs  workspace.rs
src/highlighter/themes/: macchiato.json
src/services/: agent.rs  agent_messages.rs  completions.json  connection_monitor.rs  connection_storage.rs  connections.rs  connections_store.rs  database.rs  health_checker.rs  lsp_store.rs  mod.rs  sql_analyzer.rs
src/services/agent/: client.rs  files.rs  messages.rs  mod.rs  types.rs
src/services/connections/: mod.rs  store.rs  types.rs
src/services/database/: manager.rs  mod.rs  query.rs  schema.rs  types.rs
src/services/export/: csv.rs  json.rs  mod.rs
src/services/sql/: analyzer.rs  code_action_agent.rs  completion_agent.rs  completions.rs  mod.rs
src/services/ssh/: askpass.rs  config.rs  mod.rs  reconnect.rs  service.rs  tunnel.rs  types.rs
src/services/storage/: connections.rs  history.rs  migration_tests.rs  mod.rs  types.rs
src/services/updates/: mod.rs  update_checker.rs
src/state/: actions.rs  connection.rs  database.rs  editor.rs  llm.rs  mod.rs
src/themes/: catppuccin.json  mod.rs  themes.rs
src/themes/highlighter/: latte.json
src/workspace/: agent_handler.rs  agent_panel.rs  connections_panel.rs  connections_panel_updated.rs  editor.rs  footer_bar.rs  header_bar.rs  mod.rs  results_panel.rs  tables_panel.rs  tables_tree.rs  workspace.rs
src/workspace/agent/: handler.rs  mod.rs  panel.rs  tools.rs
src/workspace/connections/: connection_form.rs  connection_list.rs  connection_list_item.rs  connection_manager.rs  connections_panel.rs  mod.rs
src/workspace/history/: mod.rs  panel.rs
src/workspace/results/: mod.rs  (+2 more)
ssh_config/: tunnel.conf
(+4 files in other folders)
