[package]
name = "pgui"
version = "0.1.1"
edition = "2024"
default-run = "pgui"

[[bin]]
name = "build-app"
path = "src/bin/build_app.rs"

[dependencies]
anyhow = "1.0"
async-channel = "2.3"
async-std = "1"
chrono = "0.4"
futures = "0.3"
gpui = "0.2.0"
gpui-component = { version = "0.2.0", features = ["tree-sitter-languages"] }
hex = "0.4"
rust-embed = "8.2.0"
rust_decimal = "1.37.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
sqlformat = "0.3.5"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls", "postgres", "rust_decimal" ] }
tree-sitter = "0.25.6"
tree-sitter-sequel = "0.3.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"
